gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

1999-10-18  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_print.c: Added some error checking to properly log 
	  a successful print or error

1999-10-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_rc.c: Fixed component-library and source-library keywords
	  to add the current working directory (conditionally) to the
	  specified path.  This fixes the bug which Mike Jarabek pointed 
	  out when specifing relative path component/source libraries

1999-10-14  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Changed Close button to be Cancel when doing
	  Open... or Save As... (Stefan pointed this out)

1999-10-13  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Fixed the callback setup for the enter key for
	  Save As (so that it calls the save function instead of the open func)

1999-10-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/x_fileselect.c: Changed filename_entry to be read-only
	  when the dialog box is a Component place

	* src/x_fileselect.c: Made the search on files behave the same
	  as on components (getting feedback when you have reached the
	  end of the list)

1999-10-11  Ales Hvezda  <ahvezda@geda.seul.org>
	
	* src/x_fs.c: Got the component search working

	* src/x_fs.c: Changed all calls to s_clib_getfiles to use the new
	  prototype (the extra param at the end)

	* src/x_filesel.c: Removed file from cvs repository

	* src/x_compsel.c: Removed file from cvs repository

	* src/x_fs.c: Renamed to x_fileselect.c

	* src/x_fileselect.c: Fixed all -Wall warnings

	* src/x_preview.c: Fixed all -Wall warnings

	* general: You can only place *.sym files as components.

	* src/o_pin.c: added o_pin_eraserubber()
	