@@ -9,6 +9,12 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+1999-10-19  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/gschem.c: Found/Fixed an old bug which basically was causing
+	  the first argument to always be interpreted as a filename which isn't	
+	  always true.
+
 1999-10-18  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/x_print.c: Added some error checking to properly log 
